--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 </head>
 <body>
     <h1>Laboratorio 3</h1>
+    <p>Bienvenido a la siguiente historia interactiva, se le presentarán una serie de opciones para decidir cómo se desarrollará la historia</p>
 </body>
 </html>
