--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <title>Laboratorio 3</title>
 </head>
 <body>
     <h1>Laboratorio 3</h1>
-    <p>Bienvenido a la siguiente historia interactiva, se le presentarán una serie de opciones para decidir cómo se desarrollará la historia</p>
+    <br>
+    <p>
+        Bienvenido a la siguiente historia interactiva, se le presentarán una serie de opciones para decidir
+        cómo se desarrollará la historia. Cada opción afectará de manera diferente la historia, así que decide
+        cuidadosamente tus acciones. ¡Disfrútalo!
+    </p>
+    <br>
+    <a href="introduction.html">Empezar</a>
 </body>
 </html>
