--- a/template.html
+++ b/template.html
@@ -27,6 +27,8 @@
   <footer>
     <label for="avances">Progreso</label>
     <progress id="avances" max="100" value="0"></progress>
+    <br><br>
+    <a href="introduction.html">Volver al inicio</a>
   </footer>
 </body>
 </html>
