--- a/introduction.html
+++ b/introduction.html
@@ -2,9 +2,33 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Introduction</title>
+    <title>Temp template</title>
 </head>
 <body>
+<h1>Título</h1>
+<details>
+    <summary>Ubicación</summary>
+    Dónde se encuentra el protagonista actualmente
+</details>
 
+<br>
+<article>Descripción de la situación</article>
+
+<aside>
+    <p>Información de contexto</p>
+</aside>
+
+<a href="">Opción 1</a> <br>
+<a href="">Opción 2</a> <br>
+<a href="">Opción 3</a> <br>
+<a href="">Opción 4</a> <br>
+
+<br><br>
+<footer>
+    <label for="avances">Progreso</label>
+    <progress id="avances" max="100" value="0"></progress>
+    <br><br>
+    <a href="introduction.html">Volver al inicio</a>
+</footer>
 </body>
 </html>
