--- a/template.html
+++ b/template.html
@@ -17,11 +17,12 @@
   <aside>
     <p>Información de contexto</p>
   </aside>
-
-  <a href="">Opción 1</a> <br>
-  <a href="">Opción 2</a> <br>
-  <a href="">Opción 3</a> <br>
-  <a href="">Opción 4</a> <br>
+  <ul>
+    <li><a href="">Opción 1</a> </li>
+    <li><a href="">Opción 2</a> </li>
+    <li><a href="">Opción 3</a> </li>
+    <li><a href="">Opción 4</a> </li>
+  </ul>
 
   <br><br>
   <footer>
