--- a/template.html
+++ b/template.html
@@ -2,10 +2,10 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Temp template</title>
+    <title>Entre el bien y el mal</title>
 </head>
 <body>
-  <h1>Título</h1>
+  <h1>Entre el bien y el mal</h1>
   <details>
     <summary>Ubicación</summary>
     Dónde se encuentra el protagonista actualmente
@@ -29,7 +29,7 @@
     <label for="avances">Progreso</label>
     <progress id="avances" max="100" value="0"></progress>
     <br><br>
-    <a href="introduction.html">Volver al inicio</a>
+    <a href="../introduction.html">Volver al inicio</a>
   </footer>
 </body>
 </html>
