--- a/introduction.html
+++ b/introduction.html
@@ -2,31 +2,36 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Temp template</title>
+    <title>Entre el bien y el mal</title>
 </head>
 <body>
-<h1>Título</h1>
+<h1>Entre el bien y el mal</h1>
 <details>
-    <summary>Ubicación</summary>
-    Dónde se encuentra el protagonista actualmente
+    <summary>Gasolinera</summary>
+    Te encuentras dentro de un vehículo, en una gasolinera a mitad de la noche.
+    Es un camino desolado, poca iluminación.
 </details>
 
 <br>
-<article>Descripción de la situación</article>
+<article>
+    Terminas de repostar gasolina en una gasolinera en medio de la nada.
+    Logras llenar el tanque de tu carro. Tu celular sique sin carga y no tienes
+    un cargador contigo. Sabes que necesitas escapar lo más rápido posible,
+    si no, ese hombre del sueño te alcanzará.
+</article>
 
 <aside>
-    <p>Información de contexto</p>
+    <p>Vez una tienda de conveniencia en mal estado y tu carro</p>
 </aside>
-
-<a href="">Opción 1</a> <br>
-<a href="">Opción 2</a> <br>
-<a href="">Opción 3</a> <br>
-<a href="">Opción 4</a> <br>
+<ul>
+    <li><a href="routes/1_store.html">Entrar a la tienda de conveniencia</a> </li>
+    <li><a href="routes/1_car.html">Subir a tu carro</a> </li>
+</ul>
 
 <br><br>
 <footer>
     <label for="avances">Progreso</label>
-    <progress id="avances" max="100" value="0"></progress>
+    <progress id="avances" max="100" value="5"></progress>
     <br><br>
     <a href="introduction.html">Volver al inicio</a>
 </footer>
