--- a/routes/2_car_map.html
+++ b/routes/2_car_map.html
@@ -29,7 +29,7 @@
 </aside>
 <ul>
   <li><a href="3_southeast.html">Ir al sureste</a> </li>
-  <li><a href="3_southeast.html">Ir al noroeste</a> </li>
+  <li><a href="3_northwest.html">Ir al noroeste</a> </li>
 </ul>
 
 <br><br>
