--- a/routes/3_southeast.html
+++ b/routes/3_southeast.html
@@ -7,21 +7,29 @@
 <body>
 <h1>Entre el bien y el mal</h1>
 <details>
-  <summary>Ubicación</summary>
-  Dónde se encuentra el protagonista actualmente
+  <summary>Carretera Estatal</summary>
+  Te encuentras manejando en lo que parece ser una carretera estatal. Prácticamente, no hay iluminación aparte de la de
+  tu carro. No has visto a ningún otro vehículo desde que huiste de casa.
 </details>
 
 <br>
-<article>Descripción de la situación</article>
+<article>
+  Llevas manejando unas dos horas desde que dejaste la gasolinera. Crees que te faltarán al menos unas 4 horas más de
+  camino, pero probablemente sea más tiempo. No solo por que te parece demasiado peligroso aumentar más la velocidad,
+  si no que ni siquiera sabes bien a dónde vas.
+  <br>
+  Recuerdas un poco del sueño has tenido. La mujer que aparece en él es una mujer, anciana y de color, de 108 años
+  de edad originaria de alguna parte de Nebraska. Nunca la has conocido, pero sientes que es una persona que busca
+  el bien. A lo lejos puedes recordar un nombre que leíste:
+  <br><br>
+  "Zona libre de Boulder"
+</article>
 
 <aside>
-  <p>Información de contexto</p>
+  <p>Nada interesante puede ser visto en la carretera. Sigue demasiado oscuro.</p>
 </aside>
 <ul>
-  <li><a href="">Opción 1</a> </li>
-  <li><a href="">Opción 2</a> </li>
-  <li><a href="">Opción 3</a> </li>
-  <li><a href="">Opción 4</a> </li>
+  <li><a href="4_southeast_cont.html">Seguir manejando</a> </li>
 </ul>
 
 <br><br>
