--- a/routes/4_southeast_cont.html
+++ b/routes/4_southeast_cont.html
@@ -17,20 +17,34 @@
   Otra hora más tarde, y parece que dentro de nada empezará el amanecer. El cielo al este empieza a tornarse en un
   profundo anaranjado que empieza a llenar todo el cielo.
   <br>
-  Después de seguir manejando un rato,
+  Después de seguir manejando un rato, una espesa neblina empieza a aparecer. La poca visibilidad que habías ganado
+  empieza a perderse otra vez. Se sigue espesando hasta el punto en el que ni las luces del carro pueden alumbrar
+  a más de unos 3 metros frente a tí. Sigues intentado avanzar en el carro, a duras penas esquivando los obstáculos,
+  hasta que lo inevitable sucede y golpeas fuertemente a otro carro abandonado. Para no empeorar el estado de tu carro,
+  decides detenerte al lado de la carretera esperando a que la neblina pase.
+  <br><br>
+  Con la neblina tan densa, y sin poder hacer mucho más, la fatiga de estar huyendo te alcanza rápidamente, y caes
+  en un sueño profundo.
+  <br><br>
+  Empiezas a oir varias voces, no las puedes identificar, pero sabes que te están hablando.
+  <br>
+  "Ven, no te detengas. No tengas miedo" - Una voz silenciosa te llama.
+  <br>
+  "Has llegado a tu destino, aquí están a quienes buscas. Te han estado esperando" - Otra voz te habla, dándote esperanzas
 </article>
 
 <aside>
-  <p></p>
+  <p>Ven, ven, ven, ven</p>
 </aside>
 <ul>
-  <li><a href="">Seguir manejando</a> </li>
+  <li><a href="">Escapa</a> </li>
+  <li><a href="5_southeast_ending_flag.html">Busca a tus padres</a> </li>
 </ul>
 
 <br><br>
 <footer>
   <label for="avances">Progreso</label>
-  <progress id="avances" max="100" value="0"></progress>
+  <progress id="avances" max="100" value="60"></progress>
   <br><br>
   <a href="../introduction.html">Volver al inicio</a>
 </footer>
