--- a/routes/4_southeast_cont.html
+++ b/routes/4_southeast_cont.html
@@ -34,10 +34,10 @@
 </article>
 
 <aside>
-  <p>Ven, ven, ven, ven</p>
+  <p>Puedes ver tu carro y una colina</p>
 </aside>
 <ul>
-  <li><a href="">Escapa</a> </li>
+  <li><a href="5_southeast_ending_freemantle.html">Escapa</a> </li>
   <li><a href="5_southeast_ending_flag.html">Busca a tus padres</a> </li>
 </ul>
 
