--- a/routes/1_store.html
+++ b/routes/1_store.html
@@ -22,9 +22,9 @@
   <p>Sabes que no tienes mucho tiempo, así que debes decidir rápido que buscar en la tienda y salir lo antes posible</p>
 </aside>
 <ul>
-  <li><a href="../routes/2_car_map.html">Buscar un mapa</a> </li>
+  <li><a href="2_car_map.html">Buscar un mapa</a> </li>
   <li><a href="">Buscar un cargador</a> </li>
-  <li><a href="../routes/1_car.html">Regresar al carro</a> </li>
+  <li><a href="1_car.html">Regresar al carro</a> </li>
 </ul>
 
 <br><br>
