--- a/routes/4_rescue_flagg.html
+++ b/routes/4_rescue_flagg.html
@@ -36,7 +36,7 @@
     <label for="avances">Progreso</label>
     <progress id="avances" max="100" value="100"></progress>
     <br><br>
-    <a href="../introduction.html">Volver al inicio</a>
+    <a href="../index.html">Volver al inicio</a>
 </footer>
 </body>
 </html>
