--- a/routes/1_store.html
+++ b/routes/1_store.html
@@ -23,7 +23,7 @@
 </aside>
 <ul>
   <li><a href="2_car_map.html">Buscar un mapa</a> </li>
-  <li><a href="">Buscar un cargador</a> </li>
+  <li><a href="2_car_charger.html">Buscar un cargador</a> </li>
   <li><a href="1_car.html">Regresar al carro</a> </li>
 </ul>
 
