--- a/routes/3_rescue.html
+++ b/routes/3_rescue.html
@@ -36,7 +36,7 @@
   <p>No puedes ver nada relevante en la carretera. Sigue demasiado oscuro.</p>
 </aside>
 <ul>
-  <li><a href="">Sigue manejando</a> </li>
+  <li><a href="4_rescue_flagg.html">Sigue manejando</a> </li>
 </ul>
 
 <br><br>
