--- a/routes/4_rescue_flagg.html
+++ b/routes/4_rescue_flagg.html
@@ -14,15 +14,18 @@
 <br>
 <article>
     Después del largo viaje, por fin llegas a casa de tus padres. La casa está hecha un desastre, pero no le prestas
-    atención. Entras lo más rápido posible buscando a tus padres.
+    atención. Entras lo más rápido posible buscando a tus padres. Buscas en todas las habitaciones, peron no hay
+    rastro de ellos.
     <br><br>
-    "Parece que puedes serme útil" -Oyes una voz detrás tuya, pero no vez a nadie.- "No te preocupes, pronto verás a tus
+    "Parece que puedes serme útil" -Oyes una voz detrás de ti, pero no vez a nadie.- "No te preocupes, pronto verás a tus
     padres."
     <br><br>
     Justo al terminar de decir esto, sientes un fuerte golpe en la nuca. Al caer al piso, lo último que vez es a dos
     personas. Reconoces a una de ellas. Estás completamente seguro que es el hombre del sueño. El otro hombre te
     arrastra desde las piernas al patio trasero de la casa. Antes de perder la conciencia, vez como te amarran las manos
     antes de tirarte atrás de una vieja camioneta.
+    <br><br>
+    En tu sueño, por fin recuerdas el nombre de esa persona: Randall Flagg.
 </article>
 
 
