--- a/routes/3_northwest.html
+++ b/routes/3_northwest.html
@@ -7,27 +7,34 @@
 <body>
 <h1>Entre el bien y el mal</h1>
 <details>
-  <summary>Ubicación</summary>
-  Dónde se encuentra el protagonista actualmente
+  <summary>Carretera Estatal</summary>
+  Te encuentras manejando en lo que parece ser una carretera estatal. Prácticamente, no hay iluminación aparte de la de
+  tu carro. No has visto a ningún otro vehículo desde que huiste de casa.
 </details>
 
 <br>
-<article>Descripción de la situación</article>
+<article>
+  Decides ir a buscar a tus padres. Si estás en lo correcto, deberías poder llegar en unas tres o cuatro horas. Mientras
+  manejas, recuerdas los sueños tan extraños que has tenido últimamente. La mitad de ellos eran acerca de una anciana
+  y de color, de 108 años de edad originaria de alguna parte de Nebraska. Tienes la sensación de que estarás seguro
+  si la encuentras, por lo que cuando te reunas con tus padres irán juntos a buscarla. Lo preocupante son los demás
+  sueños. En ellos, vez a un hombre que desprende un aura tan desagradable. No recuerdas mucho de él, pero es alguien
+  a quien claramente hay que temer.
+  <br><br>
+  No te queda nada por hacer, más que seguir manejando. Te aferras a la esperanza de poder encontrar a tus padres.
+</article>
 
 <aside>
-  <p>Información de contexto</p>
+  <p>Nada interesante puede ser visto en la carretera. Sigue demasiado oscuro.</p>
 </aside>
 <ul>
-  <li><a href="">Opción 1</a> </li>
-  <li><a href="">Opción 2</a> </li>
-  <li><a href="">Opción 3</a> </li>
-  <li><a href="">Opción 4</a> </li>
+  <li><a href="4_rescue_flagg.html">Seguir manejando</a> </li>
 </ul>
 
 <br><br>
 <footer>
   <label for="avances">Progreso</label>
-  <progress id="avances" max="100" value="0"></progress>
+  <progress id="avances" max="100" value="75"></progress>
   <br><br>
   <a href="../introduction.html">Volver al inicio</a>
 </footer>
