--- a/introduction.html
+++ b/introduction.html
@@ -14,10 +14,18 @@
 
 <br>
 <article>
-    Terminas de repostar gasolina en una gasolinera en medio de la nada.
-    Logras llenar el tanque de tu carro. Tu celular sique sin carga y no tienes
-    un cargador contigo. Sabes que necesitas escapar lo más rápido posible,
-    si no, ese hombre del sueño te alcanzará.
+    Hace algo más de dos semanas que la propagación del virus empezó. El caos se apoderó de todo, todas las grandes
+    redes de servicios ya han caído. Las personas empezaron a morir por decenas. Pero tú, empezaste a tener sueños muy
+    extraños.
+    <br>...<br>
+    Terminas de repostar gasolina en una gasolinera en medio de la nada. Logras llenar el tanque de tu carro.
+    Tu celular sique sin carga y no tienes un cargador contigo. Sabes que necesitas escapar lo más rápido posible,
+    si no, ese hombre del sueño te alcanzará. Aunque debería ser solo un sueño, recordar esos sueños hacen que sientas
+    un sudor frío en la espalda. Tal vez debas escuchar a la mujer de tu otro sueño. Por ahora, debes elegir cómo
+    prepararte para escapar. ¿Estarán tus padres aún vivos?
+    <br><br>
+
+
 </article>
 
 <aside>
