--- a/routes/2_car_map.html
+++ b/routes/2_car_map.html
@@ -15,13 +15,15 @@
 <br>
 <article>
   Regresas a tu carro y vez el mapa. Con un poco de esfuerzo logras ubicar aproximadamente donde deberías estar.
-  Crees estar en medio del estado de Dakota del Sur, por lo que debería ser posible llegar a Nebraska con la gasolina
-  que tiene el carro.
-  <br>
+  Crees estar en medio del estado de Dakota del Sur.
+  <br><br>
   Recuerdas que la mujer del sueño te decía que fueras hacia ella, y recuerdas que en el sueño veías un rótulo
-  de Nebraska.
-  Pero no es el único sueño que has tenido, ya que ese hombre también ha aparecido más de una vez en tus sueños.
-  ¿Que deberías hacer? También debería ser posible llegar a casa de tus padres, quienes viven en Montana.
+  de Nebraska. Tienes suficiente gasolina para llegar, pero, ¿y si realmente es solo un sueño?
+  <br>
+  Otro problema es que ese no ha sido el único sueño que has tenido, ya que ese hombre también ha aparecido más de una
+  vez en tus sueños. ¿Que deberías hacer? También debería ser posible llegar a casa de tus padres, quienes viven en Montana.
+  Ha pasado mucho tiempo desde que hablaste con ellos, pero realmente te sientes preocupado de qué les pudo haber
+  pasado.
 </article>
 
 <aside>
