--- a/routes/4_southeast_cont.html
+++ b/routes/4_southeast_cont.html
@@ -19,7 +19,7 @@
   <br>
   Después de seguir manejando un rato, una espesa neblina empieza a aparecer. La poca visibilidad que habías ganado
   empieza a perderse otra vez. Se sigue espesando hasta el punto en el que ni las luces del carro pueden alumbrar
-  a más de unos 3 metros frente a tí. Sigues intentado avanzar en el carro, a duras penas esquivando los obstáculos,
+  a más de unos 3 metros frente a tí. Sigues intentando avanzar en el carro, a duras penas esquivando los obstáculos,
   hasta que lo inevitable sucede y golpeas fuertemente a otro carro abandonado. Para no empeorar el estado de tu carro,
   decides detenerte al lado de la carretera esperando a que la neblina pase.
   <br><br>
@@ -31,6 +31,8 @@
   "Ven, no te detengas. No tengas miedo" - Una voz silenciosa te llama.
   <br>
   "Has llegado a tu destino, aquí están a quienes buscas. Te han estado esperando" - Otra voz te habla, dándote esperanzas
+  <br><br>
+  ¿A 'quienes buscas'? ¿Podría estar hablando de tus padres?
 </article>
 
 <aside>
