--- a/routes/1_car.html
+++ b/routes/1_car.html
@@ -38,14 +38,14 @@
   </p>
 </aside>
 <ul>
-  <li><a href="">Seguir hacia la izquierda.</a> </li>
-  <li><a href="">Seguir hacia la derecha</a> </li>
+  <li><a href="2_faith_left.html">Seguir hacia la izquierda.</a> </li>
+  <li><a href="2_faith_right.html">Seguir hacia la derecha</a> </li>
 </ul>
 
 <br><br>
 <footer>
   <label for="avances">Progreso</label>
-  <progress id="avances" max="100" value="0"></progress>
+  <progress id="avances" max="100" value="25"></progress>
   <br><br>
   <a href="../introduction.html">Volver al inicio</a>
 </footer>
