--- a/index.html
+++ b/index.html
@@ -7,12 +7,25 @@
 <body>
     <h1>Laboratorio 3</h1>
     <br>
-    <p>
+    <article>
         Bienvenido a la siguiente historia interactiva, se le presentarán una serie de opciones para decidir
         cómo se desarrollará la historia. Cada opción afectará de manera diferente la historia, así que decide
-        cuidadosamente tus acciones. ¡Disfrútalo!
-    </p>
+        cuidadosamente tus acciones.
+    </article>
     <br>
-    <a href="introduction.html">Empezar</a>
+    <article>
+        Esta historia está inspirada en el libro "Apocalipsis" de Stephen King. Si quieres tener una mejor idea,
+        te recomiendo esta sinopsis.
+    </article>
+    <br>
+    <a href="https://adriw.com/c-literatura/apocalipsis-stephen-king/">Apocalipsis (Novela) del autor Stephen King: Resumen</a>
+    <br><br>
+    <center>
+        <a href="introduction.html">Empezar</a>
+    </center>
+
+    <footer>
+        Autor: Mark Albrand - 21004
+    </footer>
 </body>
 </html>
